# mapnik-jni-win

./: .classpath  .gitmodules  .project  122.xml  CMakeLists.txt  CMakeLists_single_dll.txt  README.md  README_old.md  README_old2.md
csrc/: class_datasource.cpp  class_datasourcecache.cpp  class_featureset.cpp  class_featuretypestyle.cpp  class_freetypeengine.cpp  class_geometry.cpp  class_image.cpp  class_layer.cpp  class_map.cpp  class_parameters.cpp  class_projection.cpp  class_query.cpp  class_renderer.cpp  globals.cpp  globals.hpp  mapnik_Datasource.cpp  mapnik_DatasourceCache.cpp  mapnik_Feature.cpp  mapnik_FeatureSet.cpp  mapnik_FeatureTypeStyle.cpp  mapnik_FreetypeEngine.cpp  mapnik_Geometry.cpp  mapnik_Image.cpp  mapnik_Layer.cpp  mapnik_MapDefinition.cpp  mapnik_MapDefinition_fonts.cpp  mapnik_MapDefinition_from_string.cpp  mapnik_MapDefinition_load.cpp  mapnik_MapDefinition_query_point.cpp  mapnik_MapDefinition_render.cpp  mapnik_Mapnik.cpp  mapnik_Parameters.cpp  mapnik_ProjTransform.cpp  mapnik_Projection.cpp  mapnik_Query.cpp  mapnik_Renderer.cpp  mapnik_VectorTile.cpp  mapnik_VectorTile_clear.cpp  mapnik_VectorTile_composite.cpp  mapnik_VectorTile_data.cpp  (+10 more)
csrc/jni/: mapnik_Datasource.h  mapnik_DatasourceCache.h  mapnik_FeatureSet.h  mapnik_FeatureTypeStyle.h  mapnik_FreetypeEngine.h  mapnik_Geometry.h  mapnik_Image.h  mapnik_Layer.h  mapnik_MapDefinition.h  mapnik_Mapnik.h  mapnik_Parameters.h  mapnik_Projection.h  mapnik_Query.h  mapnik_Renderer.h
csrc/utils/: JNIObjectHolders.hpp  MapnikValueToJNIVisitor.hpp  jni_map_to_mapnik_attributes.hpp
demo/: .gitignore
demo/src/: App.java
src/geowin/mapnik/: AttributeDescriptor.java  Box2d.java  Color.java  Coord.java  Datasource.java  Feature.java  FeatureSet.java  FeatureTypeStyle.java  Geometry.java  Image.java  Layer.java  LayerDescriptor.java  MapDefinition.java  Mapnik.java  NativeObject.java  ProjTransform.java  Projection.java  Query.java  VectorTile.java
src/geowin/mapnik/options/: AspectFixMode.java  Compression.java  CompressionStrategy.java  GeometryTypes.java  ImageFormat.java  ImageScaling.java  Launch.java  PolygonFillType.java
src/geowin/mapnik/outputformat/: FormatStringBuilderBase.java  JpegFormatStringBuilder.java  PngFormatStringBuilder.java  TiffFormatStringBuilder.java  WebpFormatStringBuilder.java
src/mapnik/: AspectFixMode.java  AttributeDescriptor.java  Box2d.java  Color.java  Coord.java  Datasource.java  DatasourceCache.java  Feature.java  FeatureSet.java  FeatureTypeStyle.java  FreetypeEngine.java  Geometry.java  Image.java  Layer.java  LayerDescriptor.java  MapDefinition.java  Mapnik.java  NativeObject.java  Parameters.java  ProjTransform.java  Projection.java  Query.java  Renderer.java  VectorTile.java
src/mapnik/options/: AspectFixMode.java  Compression.java  CompressionStrategy.java  GeometryTypes.java  ImageFormat.java  ImageScaling.java  Launch.java  PolygonFillType.java
src/mapnik/outputformat/: FormatStringBuilderBase.java  JpegFormatStringBuilder.java  PngFormatStringBuilder.java  TiffFormatStringBuilder.java  WebpFormatStringBuilder.java
test/: .gitignore
test/geowin/mapnik/: Demo.java  Setup.java  TestDatasource.java  TestImage.java  TestLayer.java  TestLoadLibrary.java  TestMap.java  TestProjection.java  TestVectorTile.java
test/mapnik/: Demo.java  Setup.java  TestDatasource.java  TestImage.java  TestLayer.java  TestMap.java  TestProjection.java  TestVectorTile.java
tools/geowin/mapnik/: CrunchMemory.java
tools/mapnik/: CrunchMemory.java
